[tool.poetry]
name = "hammer"
version = "0.1.0"
description = ""
authors = ["Andrey <lutecequantum@gmail.com>"]
packages = [
    { include = 'hammer_test' },
    ]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.3"
psycopg2-binary = "^2.9.6"
dj-database-url = "^2.0.0"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
